# Coders

./: .gitignore  .gitmodules  AGENTS.md  AGENT_CHAT.md  FINAL_SUMMARY.md  INSTRUCTIONS_REVIEW.md  PHASE2_SUMMARY.md  README.md  REAL_GMT_TEST_RESULTS.md  REPOSITORY_REVIEW.md  gmt.history  justfile  mise.toml
.claude/: settings.local.json
.github/workflows/: README.md  pygmt-nanobind-ci.yaml  tesseract-nanobind-build-wheels.yaml  tesseract-nanobind-build-wheels.yml  tesseract-nanobind-ci.yaml  tesseract-nanobind-ci.yml  test.yml
mlt_nanobind_benchmark/: .gitignore  CMakeLists.txt  INSTRUCTIONS  README.md  pyproject.toml
mlt_nanobind_benchmark/benchmarks/: __init__.py  compare_performance.py  real_world_benchmark.py
mlt_nanobind_benchmark/docs/: api_reference.md  building.md  examples.md  performance.md  usage.md
mlt_nanobind_benchmark/python/mlt_nb/: __init__.py
mlt_nanobind_benchmark/src/: bindings.cpp
mlt_nanobind_benchmark/tests/: __init__.py  test_basic.py  test_numpy_integration.py
mlt_nanobind_benchmark/validation/: __init__.py  test_swig_compatibility.py
pygmt_nanobind_benchmark/: .gitignore  CMakeLists.txt  FACT.md  FINAL_INSTRUCTIONS_REVIEW.md  FINAL_VALIDATION_REPORT.md  IMPLEMENTATION_GAP_ANALYSIS.md  INSTRUCTIONS  INSTRUCTIONS_COMPLIANCE_REVIEW.md  PERFORMANCE.md  PHASE3_RESULTS.md  PHASE4_RESULTS.md  PLAN_VALIDATION.md  PROJECT_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  SESSION_SUMMARY.md  SUBPROCESS_REMOVAL_PLAN.md  gmt.conf  pyproject.toml  test_batch10.py  test_batch12.py  test_batch13_simple.py  test_batch14.py  test_batch17.py  test_batch8.py  test_batch9.py
pygmt_nanobind_benchmark/benchmarks/: BENCHMARK_RESULTS.md  PHASE2_BENCHMARK_RESULTS.md  PHASE3_BENCHMARK_RESULTS.md  PHASE4_BENCHMARK_RESULTS.md  README.md  __init__.py  benchmark.py  benchmark_dataio.py  benchmark_phase3.py  benchmark_pygmt_comparison.py  benchmark_session.py  compare_with_pygmt.py  phase2_grid_benchmarks.py  phase3_figure_benchmarks.py  phase4_figure_benchmarks.py  quick_benchmark.py  real_world_benchmark.py  real_world_benchmark_quick.py
pygmt_nanobind_benchmark/benchmarks/archive/: benchmark_base.py  benchmark_dataio.py  benchmark_modern_mode.py  benchmark_nanobind_vs_subprocess.py  benchmark_pygmt_comparison.py
pygmt_nanobind_benchmark/docs/: ARCHITECTURE_ANALYSIS.md  BENCHMARK_VALIDATION.md  COMPLIANCE.md  README.md  REAL_WORLD_BENCHMARK.md  STATUS.md  VALIDATION.md
pygmt_nanobind_benchmark/docs/archive/: INSTRUCTIONS_COMPLIANCE_REVIEW.md  MODERN_MODE_MIGRATION_AUDIT.md  RUNTIME_REQUIREMENTS.md  TEST_COVERAGE_ANALYSIS.md
pygmt_nanobind_benchmark/docs/history/: ARCHITECTURE_ANALYSIS.md  CORE_IMPLEMENTATION.md  GMT_INTEGRATION_TESTS.md  PROJECT_STRUCTURE.md
pygmt_nanobind_benchmark/python/pygmt_nb/: __init__.py  binstats.py  blockmean.py  blockmedian.py  blockmode.py  config.py  dimfilter.py  figure.py  filter1d.py  grd2cpt.py  grd2xyz.py  grdclip.py  grdcut.py  grdfill.py  grdfilter.py  grdgradient.py  grdhisteq.py  grdinfo.py  grdlandmask.py  grdproject.py  grdsample.py  grdtrack.py  grdvolume.py  info.py  makecpt.py  nearneighbor.py  project.py  select.py  sph2grd.py  sphdistance.py  sphinterpolate.py  surface.py  triangulate.py  which.py  x2sys_cross.py  x2sys_init.py  xyz2grd.py
pygmt_nanobind_benchmark/python/pygmt_nb/clib/: __init__.py
pygmt_nanobind_benchmark/python/pygmt_nb/src/: __init__.py  basemap.py  coast.py  colorbar.py  contour.py  grdcontour.py  grdimage.py  grdview.py  histogram.py  hlines.py  image.py  inset.py  legend.py  logo.py  meca.py  plot.py  plot3d.py  psconvert.py  rose.py  shift_origin.py  solar.py  subplot.py  ternary.py  text.py  tilemap.py  timestamp.py  velo.py  vlines.py  wiggle.py
pygmt_nanobind_benchmark/src/: bindings.cpp
pygmt_nanobind_benchmark/tests/: test_basemap.py  test_coast.py  test_colorbar.py  test_figure.py  test_grdcontour.py  test_grid.py  test_logo.py  test_plot.py  test_session.py  test_text.py
pygmt_nanobind_benchmark/tests/batches/: test_batch11.py  test_batch13.py  test_batch15.py  test_batch16.py  test_batch18_final.py  test_batch4.py  test_batch5.py  test_batch6.py  test_batch7.py
pygmt_nanobind_benchmark/tests/data/: large_grid.nc  test_grid.nc
pygmt_nanobind_benchmark/validation/: README.md  benchmark_validation.py  compare_operation.py  validate.py  validate_basic.py  validate_detailed.py  validate_output.py  validate_phase4.py  validate_pixel_identical.py  validate_supplemental.py  visual_comparison.py
tesseract_nanobind_benchmark/: CMakeLists.txt  INSTRUCTIONS  PHASE1_IMPLEMENTATION_REPORT.md  README.md  TESSEROCR_COMPAT.md  TESSEROCR_COMPATIBILITY_AUDIT.md  TEST_COVERAGE.md  VERSION_MANAGEMENT.md  pyproject.toml
tesseract_nanobind_benchmark/benchmarks/: benchmark.py  compare_all.py  run_benchmarks.py
tesseract_nanobind_benchmark/docs/: COMPATIBILITY.md
tesseract_nanobind_benchmark/docs/development-history/: justfile-verification.md  phase1-validation.md  phase2-implementation.md  phase2-validation.md  phase3-plan.md  phase3a-implementation.md  phase3a-validation.md  test-verification.md
tesseract_nanobind_benchmark/examples/: basic_usage.py
tesseract_nanobind_benchmark/src/: tesseract_nanobind_ext.cpp
tesseract_nanobind_benchmark/src/tesseract_nanobind/: __init__.py  compat.py
tesseract_nanobind_benchmark/tests/: test_advanced.py  test_api_features.py  test_basic.py  test_compat.py  test_compat_extended.py  test_configuration_and_output.py  test_error_handling.py  test_image_formats.py  test_image_thresholding.py  test_orientation_and_layout.py  test_phase1_features.py  test_phase2_features.py  test_phase3a_features.py  test_phase3b_features.py  test_validation_realworld.py  test_word_and_line_extraction.py
